--- a/styles/blocks/_globals.scss
+++ b/styles/blocks/_globals.scss
@@ -2,6 +2,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   color: white;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
